# mock-api-server

./: .gitignore  Dockerfile  Dockerfile.tests  TASKS.md  ca.cert.pem  compose.yaml  debian_packages.txt  new_Dockerfile  pyproject.toml  readme.md
app/: mock.py
app/responses/: guid_add.json  guids.json  inventory_devices.json
app/routes/: common_helper.py  inventory_devices.py  inventory_files.py
database/: empty.sql
helpers/: cert_helper.py  request_helper.py
rsa-cert-generation/: create_certs.sh  intermediate-openssl.conf  root-openssl.conf
tests/: conftest.py  readme.md  test_api.py  utils.py
tests/api_tests/: conftest.py  test_inventory_devices.py  test_inventory_files.py
tests/config/: config.json
tests/helpers/: cert_helper.py
